k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-app-deployment
  namespace: blogging-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: twitter-app

  template:
    metadata:
      labels:
        app: twitter-app

    spec:
      containers:
      - name: twitter-app

        image: naveen0922/twitter-app:21

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 8080

          initialDelaySeconds: 30
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 8080

          initialDelaySeconds: 60
          periodSeconds: 20
